# MusicWithServer

./: .gitignore  Cargo.toml  README.md
src/: env.rs  main.rs  state.rs
src/auth/: state.rs
src/chat/: amsg.rs  bmsg.rs  broad.rs  client.rs  hot.rs  mod.rs  state.rs
src/lyric/: lyric.rs  mod.rs  state.rs
src/route/: callback.rs  chat.rs  hot.rs  index.rs  login.rs  lyrics.rs  mod.rs  r_callback.rs  r_login.rs  token.rs
src/util/: env_var.rs  mod.rs  random_string.rs
test/: chat_client.py
