[package]
name    = 'musicwith'
version = '0.1.0'
edition = '2021'

[dependencies]
rocket           = '0.5.1'
reqwest          = { version = '0.12.9' , features = ['json'  ] }
serde            = { version = '1.0.214', features = ['derive'] }
dotenv           = '0.15.0'
rand             = '0.8.5'
serde_urlencoded = '0.7.1'
base64           = '0.22.1'
lazy_static      = '1.5.0'