[package]
name    = 'musicwith'
version = '0.1.0'
edition = '2021'

[dependencies]
rocket           = { version = '0.5.1'  , features = ['json'  ] }
rocket_ws        = '0.1.1'
tokio            = '1.41.1'
reqwest          = { version = '0.12.9' , features = ['json', 'cookies'] }
serde            = { version = '1.0.215', features = ['derive'         ] }
serde_json       = "1.0.133"
dotenvy          = '0.15.7'
rand             = '0.8.5'
serde_urlencoded = '0.7.1'
base64           = '0.22.1'
lazy_static      = '1.5.0'
chrono           = '0.4.38'
dashmap          = '6.1.0'
polodb_core      = "5.1.3"
